--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,45 @@ __pycache__/
 # === Coverage artifacts ===
 .coverage
 htmlcov/
+
+# === Node.js / TypeScript ===
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.yarn-integrity
+.pnp.*
+
+# === TypeScript build artifacts ===
+*.tsbuildinfo
+dist/
+build/
+coverage/
+
+# === Package manager files ===
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# === Environment files ===
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# === IDE specific ===
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# === OS generated files ===
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
