feat(console): add MOVA Web Console with comprehensive test suite
- Create Next.js web interface for MOVA Engine
- Implement envelope editor with JSON syntax highlighting
- Add runs monitoring and detailed log viewer
- Build with TypeScript, TailwindCSS, shadcn/ui components
- Integrate MOVA TypeScript SDK for API communication
- Add comprehensive test suite with Jest & React Testing Library
- Include Docker configuration and deployment setup
- Document setup and usage in docs/console.md

Features:
- Interactive envelope execution with real-time feedback
- Runs list with status indicators and filtering
- Detailed run inspection with JSONL logs
- Modern responsive UI with syntax highlighting
- Full test coverage for components and API integration

--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,10 @@ package-lock.json
 yarn.lock
 pnpm-lock.yaml
 
+# === Package archives ===
+*.tgz
+*.tar.gz
+
 # === Environment files ===
 .env.local
 .env.development.local
