--- a/MOVA_ENGINE/infra/docker/docker-compose.yml
+++ b/MOVA_ENGINE/infra/docker/docker-compose.yml
@@ -5,95 +5,49 @@ services:
     build:
       context: ../..
       dockerfile: infra/docker/Dockerfile
+    container_name: mova-api
     ports:
       - "8080:8080"
     environment:
-      - GIN_MODE=debug
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_NAME=mova
-      - DB_USER=mova
-      - DB_PASSWORD=mova_password
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-    depends_on:
-      - postgres
-      - redis
+      - MOVA_PORT=8080
+      - MOVA_HOST=0.0.0.0
+      - MOVA_LOG_LEVEL=info
+      - MOVA_STATE_DIR=/app/state
     volumes:
-      - ../../schemas:/app/schemas:ro
-    networks:
-      - mova-network
-
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      - POSTGRES_DB=mova
-      - POSTGRES_USER=mova
-      - POSTGRES_PASSWORD=mova_password
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - mova-network
-
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - mova-network
-
-  prometheus:
-    image: prom/prometheus:latest
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=200h'
-      - '--web.enable-lifecycle'
-    networks:
-      - mova-network
-
-  grafana:
-    image: grafana/grafana:latest
-    ports:
-      - "3001:3000"
-    environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-    volumes:
-      - grafana_data:/var/lib/grafana
-    depends_on:
-      - prometheus
+      - mova_state:/app/state
+      - mova_logs:/app/logs
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
     networks:
       - mova-network
 
   mova-console:
     build:
-      context: ../../../mova-console
+      context: ../../mova-console
       dockerfile: Dockerfile
+    container_name: mova-console
     ports:
       - "3000:3000"
     environment:
-      - NEXT_PUBLIC_MOVA_API_URL=http://mova-api:8080
+      - NODE_ENV=production
+      - NEXT_PUBLIC_API_URL=http://mova-api:8080
     depends_on:
-      - mova-api
+      mova-api:
+        condition: service_healthy
+    restart: unless-stopped
     networks:
       - mova-network
 
 volumes:
-  postgres_data:
-  redis_data:
-  prometheus_data:
-  grafana_data:
+  mova_state:
+    driver: local
+  mova_logs:
+    driver: local
 
 networks:
   mova-network:
