--- a/MOVA_ENGINE/infra/docker/docker-compose.yml
+++ b/MOVA_ENGINE/infra/docker/docker-compose.yml
@@ -49,6 +49,55 @@ volumes:
   mova_logs:
     driver: local
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: mova-prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ../monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    restart: unless-stopped
+    networks:
+      - mova-network
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: mova-grafana
+    ports:
+      - "3001:3000"
+    volumes:
+      - ../monitoring/grafana/grafana.ini:/etc/grafana/grafana.ini
+      - ../monitoring/grafana/datasources:/etc/grafana/provisioning/datasources
+      - ../monitoring/grafana/dashboards:/var/lib/grafana/dashboards
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+    depends_on:
+      - prometheus
+    restart: unless-stopped
+    networks:
+      - mova-network
+
+volumes:
+  mova_state:
+    driver: local
+  mova_logs:
+    driver: local
+  prometheus_data:
+    driver: local
+  grafana_data:
+    driver: local
+
 networks:
   mova-network:
     driver: bridge
